--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-May-2",
-  "seed": 1618886337
+  "seed": 900102556,
+  "rate": "4.33"
 }
