--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-2",
-  "seed": 900102556,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 345487125,
+  "date": "2025-May-2"
 }
