--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1055372318,
+  "date": "2025-May-2",
+  "seed": 1066627074,
   "rate": "4.33",
-  "date": "2025-May-2"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
