--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-2",
-  "seed": 1066627074,
+  "seed": 1191530651,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-May-2"
 }
