--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-May-2",
   "rate": "4.33",
-  "seed": 3319691,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-2"
+  "seed": 1828274787
 }
