--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
+  "seed": 329872486,
   "date": "2025-May-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1389574679,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
