--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-May-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 977696933,
-  "date": "2025-May-5"
+  "seed": 1596766014
 }
