--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1762159890,
-  "date": "2025-May-5"
+  "seed": 602699219,
+  "date": "2025-May-5",
+  "rate": "4.33"
 }
