--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-5",
   "rate": "4.33",
-  "seed": 1503528974
+  "seed": 396560036,
+  "date": "2025-May-5",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
