--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-May-5",
-  "seed": 2138212478,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2062352394,
+  "date": "2025-May-5"
 }
