--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-May-6",
+  "seed": 356418238,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 222251707,
-  "date": "2025-May-6"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
