--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
+  "seed": 632968093,
   "date": "2025-May-6",
-  "seed": 379796856
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
