--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-6",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1055336660
+  "rate": "4.33",
+  "seed": 1076529532,
+  "date": "2025-May-6"
 }
