--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-May-6",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1076529532,
-  "date": "2025-May-6"
+  "seed": 2097175367,
+  "rate": "4.33"
 }
