--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-6",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2097175367,
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-May-6",
+  "seed": 1395512823
 }
