--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-7",
+  "rate": "4.33",
+  "seed": 785909441,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1468178632,
-  "rate": "4.33"
+  "date": "2025-May-7"
 }
