--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 785909441,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-7"
+  "seed": 1450376404,
+  "date": "2025-May-7",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
