--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2003928498,
   "date": "2025-May-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 120925576,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
