--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-7",
-  "seed": 120925576,
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1503408692,
+  "rate": "4.33"
 }
