--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1062005007,
+  "date": "2025-May-7",
   "rate": "4.33",
-  "date": "2025-May-7"
+  "seed": 958838837
 }
