--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-7",
   "rate": "4.33",
-  "seed": 958838837
+  "seed": 1249243759,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-7"
 }
