--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1897809955,
-  "date": "2025-May-8"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-8",
+  "seed": 1134562394
 }
