--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 53300312,
   "date": "2025-May-8",
-  "seed": 1134562394
+  "rate": "4.33"
 }
