--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1404418947,
   "date": "2025-May-8",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 939131494
 }
