--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 657385057,
   "rate": "4.33",
   "date": "2025-May-8",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 752436706
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
