--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-May-8",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1459418293
+  "seed": 1182240468,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
