--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-9",
   "rate": "4.33",
-  "seed": 1084575647
+  "seed": 804156362,
+  "date": "2025-May-9"
 }
