--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-May-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1186676726,
-  "date": "2025-May-9"
+  "rate": "4.33",
+  "seed": 1891916586
 }
