--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1891916586
+  "seed": 1201915184,
+  "date": "2025-May-9",
+  "rate": "4.33"
 }
