--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1812437579,
+  "seed": 1694470254,
   "date": "2025-May-9",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
