--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-9",
+  "seed": 346287887,
   "rate": "4.33",
-  "seed": 570947579
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-9"
 }
