--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 346287887,
+  "date": "2025-May-9",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-9"
+  "seed": 1303652421,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
