--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1634077013,
-  "date": "2025-May-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1410449919,
+  "rate": "4.33",
+  "date": "2025-May-12"
 }
