--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "date": "2025-May-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1761792200,
-  "date": "2025-May-12"
+  "seed": 437692887
 }
