--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 478127994,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-12",
   "rate": "4.33",
-  "date": "2025-May-12"
+  "seed": 1374575201
 }
