--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-12",
   "rate": "4.33",
-  "seed": 1830346329,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1688905311
 }
