--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 218531628,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 529716345,
+  "date": "2025-May-13"
 }
