--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-13",
   "rate": "4.33",
-  "seed": 529716345,
-  "date": "2025-May-13"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 24184749
 }
