--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 853097006,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 971681611,
-  "date": "2025-May-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-May-13"
 }
