--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-13",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1656890834
+  "rate": "4.33",
+  "seed": 390504991,
+  "date": "2025-May-13"
 }
