--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1394105880,
   "rate": "4.33",
-  "seed": 390504991,
-  "date": "2025-May-13"
+  "date": "2025-May-13",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
