--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-13",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 591289054,
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-May-13",
+  "seed": 1504902293
 }
