--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-May-13",
-  "seed": 1504902293
+  "rate": "4.33",
+  "seed": 1996479923,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
