--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 838263332,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-13",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 873610749
 }
