--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 721418787,
   "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-14",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1826008818
 }
