--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "seed": 966638832,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-14",
-  "seed": 1826008818
+  "date": "2025-May-14"
 }
