--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 939073162,
   "rate": "4.33",
-  "date": "2025-May-14"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-14",
+  "seed": 1349287516
 }
