--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1154766429,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-14",
-  "seed": 1349287516
+  "rate": "4.33"
 }
