--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "date": "2025-May-14",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2004862732,
-  "rate": "4.33"
+  "seed": 794714256,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
