--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
   "date": "2025-May-14",
-  "seed": 1109103115
+  "seed": 42151100,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
