--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1751705660,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-15"
+  "seed": 1327858588,
+  "date": "2025-May-15",
+  "rate": "4.33"
 }
