--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
+  "seed": 1343003305,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1327858588,
-  "date": "2025-May-15",
-  "rate": "4.33"
+  "date": "2025-May-15"
 }
