--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 158172073,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-May-15",
-  "rate": "4.33"
+  "seed": 435661061,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
