--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-15",
-  "seed": 346090682,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1604564657,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-May-15"
 }
