--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1604564657,
   "rate": "4.33",
-  "date": "2025-May-15"
+  "date": "2025-May-15",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 585938197
 }
