--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-May-15",
+  "seed": 890494479,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 585938197
+  "rate": "4.33",
+  "date": "2025-May-15"
 }
