--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 890494479,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-May-15"
+  "seed": 1556925203,
+  "date": "2025-May-15",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
