--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-16",
-  "seed": 2020200153
+  "seed": 213079376,
+  "date": "2025-May-16"
 }
