--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1720653867,
+  "date": "2025-May-16",
+  "seed": 1436626720,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-May-16"
+  "rate": "4.33"
 }
