--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2016980272,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-16",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 137018373,
+  "date": "2025-May-16"
 }
