--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-16",
+  "seed": 1974119194,
   "rate": "4.33",
-  "seed": 772846765
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
