--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 8373456,
   "date": "2025-May-16",
-  "seed": 658190436
+  "rate": "4.33"
 }
