--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 309352738,
   "date": "2025-May-19",
-  "rate": "4.33",
-  "seed": 1757177912,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
