--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1980745861,
-  "date": "2025-May-19"
+  "seed": 1061576792,
+  "date": "2025-May-19",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
