--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1219694664,
   "rate": "4.33",
-  "seed": 1061576792,
-  "date": "2025-May-19",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-19"
 }
