--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1219694664,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-19"
+  "rate": "4.33",
+  "date": "2025-May-19",
+  "seed": 1359343866
 }
