--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-May-19",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 456839189
+  "seed": 817755725,
+  "date": "2025-May-20",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
