--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 817755725,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-20",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "seed": 1650594862
 }
