--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 272007728,
   "date": "2025-May-20",
-  "seed": 166253857
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
