--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 272007728,
-  "date": "2025-May-20",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 201387481,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-May-20"
 }
