--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1566122437,
+  "seed": 631551512,
+  "date": "2025-May-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-May-20"
+  "rate": "4.33"
 }
