--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-20",
+  "seed": 527918521,
+  "date": "2025-May-21",
   "rate": "4.33",
-  "seed": 218434096
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
