--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-21",
-  "rate": "4.33",
+  "seed": 1196343372,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 319153127
+  "rate": "4.33",
+  "date": "2025-May-21"
 }
