--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-21",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1397890140,
   "rate": "4.33",
-  "seed": 690813826,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-May-21"
 }
