--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1397890140,
-  "rate": "4.33",
-  "date": "2025-May-21"
+  "date": "2025-May-21",
+  "seed": 73804483,
+  "rate": "4.33"
 }
