--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2109605254,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-May-21",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1035826991,
+  "date": "2025-May-21"
 }
