--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1817980329,
-  "rate": "4.33",
+  "date": "2025-May-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-21"
+  "rate": "4.33",
+  "seed": 767981481
 }
