--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 767981481
+  "seed": 282167370,
+  "date": "2025-May-22"
 }
