--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 698556745,
-  "date": "2025-May-22"
+  "seed": 1074212979,
+  "date": "2025-May-22",
+  "rate": "4.33"
 }
