--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1074212979,
   "date": "2025-May-22",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 113493310,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
