--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 563875449,
   "date": "2025-May-22",
-  "seed": 578791551
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
