--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 563875449,
+  "rate": "4.33",
   "date": "2025-May-22",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1320060006,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
