--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1955030110,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-22",
-  "seed": 1320060006,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
