--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1955030110,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 565220428,
   "date": "2025-May-22",
-  "rate": "4.33"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
