--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 342268807,
-  "date": "2025-May-22"
+  "date": "2025-May-22",
+  "seed": 1918078494,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
