--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 442180033,
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-May-22",
+  "seed": 1779017130
 }
