--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-22",
-  "seed": 609984713,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-May-22",
+  "rate": "4.33",
+  "seed": 1952168399
 }
