--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1896903409,
   "date": "2025-May-22",
-  "seed": 2133481380
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
