--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1896903409,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 284051573,
   "date": "2025-May-22",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
