--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-May-22",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 25679385,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 995465973
 }
