--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1231396569,
+  "date": "2025-May-26*",
+  "seed": 1637561503,
   "rate": "4.33"
 }
