--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1609169290,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-26*",
-  "seed": 1637561503,
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-May-26*"
 }
