--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 928276306,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-26*"
+  "date": "2025-May-26*",
+  "rate": "4.33",
+  "seed": 1608553661
 }
