--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-26*",
+  "seed": 133107997,
   "rate": "4.33",
-  "seed": 1608553661
+  "date": "2025-May-26*"
 }
