--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 133107997,
   "rate": "4.33",
-  "date": "2025-May-26*"
+  "date": "2025-May-26*",
+  "seed": 2144047745,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
