--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-May-26*",
+  "seed": 84378398,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1178629287
+  "date": "2025-May-26*",
+  "rate": "4.33"
 }
