--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-May-26*",
+  "seed": 338482227,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 205309537
+  "date": "2025-May-26*",
+  "rate": "4.33"
 }
