--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1552565213,
-  "date": "2025-May-26*",
-  "rate": "4.33"
+  "seed": 439222285,
+  "rate": "4.33",
+  "date": "2025-May-27",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
