--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 314663245,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-27",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1032468072
 }
