--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-27",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 788858926
+  "date": "2025-May-27",
+  "seed": 566646584,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
