--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-27",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 134189495
+  "date": "2025-May-27",
+  "seed": 1822011205,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
