--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-27",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1073263657
+  "date": "2025-May-27",
+  "seed": 708825295,
+  "rate": "4.33"
 }
