--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1783952463,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-May-27"
+  "date": "2025-May-27",
+  "seed": 594110447,
+  "rate": "4.33"
 }
