--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-May-27",
-  "seed": 2031345051
+  "seed": 655592839,
+  "date": "2025-May-28"
 }
