--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-28",
-  "seed": 1252853575,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1752744598,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-May-28"
 }
