--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 436935489,
+  "date": "2025-May-28",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 55643485,
-  "date": "2025-May-28"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
