--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 424614908,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-28"
+  "seed": 48289396,
+  "date": "2025-May-28",
+  "rate": "4.33"
 }
