--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1644986637,
   "date": "2025-May-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 593306655
 }
