--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-28",
-  "rate": "4.33",
+  "seed": 429879595,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 593306655
+  "date": "2025-May-28",
+  "rate": "4.33"
 }
