--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1622506247,
+  "seed": 1084791629,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-28",
-  "rate": "4.33"
+  "date": "2025-May-29"
 }
