--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1095442106,
   "rate": "4.33",
-  "date": "2025-May-29"
+  "date": "2025-May-29",
+  "seed": 142179495,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
