--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-May-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1085287923,
-  "date": "2025-May-29"
+  "rate": "4.33",
+  "seed": 1019430145
 }
