--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1483710293,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-29",
-  "seed": 1024612862
+  "rate": "4.33",
+  "date": "2025-May-29"
 }
