--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1483710293,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-29",
   "rate": "4.33",
-  "date": "2025-May-29"
+  "seed": 1441575924,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
