--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-29",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1129686445,
   "rate": "4.33",
-  "seed": 1441575924,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-May-29"
 }
