--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1129686445,
+  "date": "2025-May-29",
   "rate": "4.33",
-  "date": "2025-May-29"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 789871420
 }
