--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1828590714,
   "date": "2025-May-29",
-  "rate": "4.33"
+  "seed": 223973551
 }
