--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1086300810,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-29",
-  "seed": 223973551
+  "date": "2025-May-30",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
