--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1086300810,
+  "seed": 399469654,
   "rate": "4.33",
-  "date": "2025-May-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-30"
 }
