--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 669869269,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1850792896,
-  "rate": "4.33",
-  "date": "2025-May-30"
+  "date": "2025-May-30",
+  "rate": "4.33"
 }
