--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 669869269,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-30",
-  "rate": "4.33"
+  "seed": 590813427,
+  "date": "2025-May-30"
 }
