--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-May-30",
+  "seed": 1343170495,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 590813427,
-  "date": "2025-May-30"
+  "rate": "4.33"
 }
