--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-30",
-  "seed": 734932035
+  "rate": "4.33",
+  "seed": 1267812975,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
