--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-May-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1492439413
+  "seed": 117383823,
+  "date": "2025-May-30",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
