--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 117383823,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-May-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 927402784,
+  "rate": "4.33"
 }
