--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 921390597,
+  "rate": "4.33",
+  "date": "2025-Jun-2",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-30",
-  "rate": "4.33"
+  "seed": 912282417
 }
