--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "date": "2025-Jun-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 912282417
+  "seed": 344847108,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
