--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1519001658,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jun-2",
-  "seed": 344847108,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jun-2"
 }
