--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-2",
   "rate": "4.33",
-  "seed": 292868828
+  "seed": 152813717,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
