--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1952256397,
   "date": "2025-Jun-2",
-  "rate": "4.33",
-  "seed": 152813717,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
