--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 286894338,
-  "date": "2025-Jun-2"
+  "date": "2025-Jun-2",
+  "seed": 1261624416,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
