--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-3",
   "rate": "4.33",
+  "seed": 1725675951,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1554410058
+  "date": "2025-Jun-3"
 }
