--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1725675951,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-3"
+  "rate": "4.33",
+  "date": "2025-Jun-3",
+  "seed": 923410979
 }
