--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jun-3",
-  "seed": 923410979
+  "rate": "4.33",
+  "seed": 1530297245,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
