--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jun-3",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 421103842,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 166446334
 }
