--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jun-3",
   "rate": "4.33",
-  "seed": 1862202126,
-  "date": "2025-Jun-3"
+  "seed": 1018051170
 }
