--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jun-4",
+  "seed": 313487219,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-3",
-  "rate": "4.33",
-  "seed": 1018051170
+  "rate": "4.33"
 }
