--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jun-4",
-  "seed": 1496675922
+  "seed": 1841189778,
+  "rate": "4.33"
 }
