--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-4",
-  "rate": "4.33",
+  "seed": 94477545,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 565031630
+  "rate": "4.33",
+  "date": "2025-Jun-4"
 }
