--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 94477545,
+  "date": "2025-Jun-4",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jun-4"
+  "seed": 997575070,
+  "rate": "4.33"
 }
