--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1644917458,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-4"
+  "date": "2025-Jun-4",
+  "seed": 2097012806
 }
