--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-4",
-  "seed": 2097012806
+  "rate": "4.33",
+  "seed": 1503465747,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
