--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 440944884,
   "rate": "4.33",
-  "date": "2025-Jun-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1421038137,
+  "date": "2025-Jun-4"
 }
