--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 59030147,
-  "rate": "4.33",
-  "date": "2025-Jun-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jun-5",
+  "seed": 967282105,
+  "rate": "4.33"
 }
