--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-5",
-  "seed": 967282105,
-  "rate": "4.33"
+  "seed": 1236886465
 }
