--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1517970753,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 482192293,
+  "date": "2025-Jun-5",
   "rate": "4.33",
-  "date": "2025-Jun-5"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
