--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 759321477,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-5"
+  "seed": 610121581,
+  "date": "2025-Jun-5",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
