--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jun-5",
-  "rate": "4.33",
+  "seed": 980125338,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1174862607
+  "rate": "4.33"
 }
