--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 490564676,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jun-6"
+  "seed": 744453586,
+  "date": "2025-Jun-6",
+  "rate": "4.33"
 }
