--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 835991925,
+  "rate": "4.33",
   "date": "2025-Jun-6",
-  "rate": "4.33"
+  "seed": 1847818806,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
