--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-6",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 531149427
+  "date": "2025-Jun-9",
+  "seed": 1318519233,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
