--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 716457420,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-9",
-  "seed": 809197260
+  "rate": "4.33"
 }
