--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 716457420,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-9",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 446624605,
+  "date": "2025-Jun-9"
 }
