--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 1107397937,
   "date": "2025-Jun-9",
-  "seed": 1916566347
+  "rate": "4.33"
 }
