--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1107397937,
+  "rate": "4.33",
+  "seed": 1563308374,
   "date": "2025-Jun-9",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
