--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1563308374,
+  "seed": 415587603,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-9",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
