--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 415587603,
+  "rate": "4.33",
+  "date": "2025-Jun-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-9",
-  "rate": "4.33"
+  "seed": 1014839472
 }
